--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "react-scripts": "1.0.13"
   },
   "scripts": {
-    "dev": "react-scripts start",
-    "start": "react-scripts build",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
